# beauty1

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: GetParams.hpp  logic.cpp  logic.h  main.cpp
tests/: CMakeLists.txt  test_logic.cpp
